# Voting

./: .env  .gitignore  Amazing  Choice coin  For the love of choicecoin  LICENSE  License Approval  License.txt  License.txt Choice Coin Solutions  Love of choicecoin  Proposal_Processor  README.md  README1.md  Update Licence.txt  Update License.txt  choice coin  index.html  package-lock.json  package.json  requirements.txt  run.py  script-1.js  sqlite.py  style-3.css  style.css  voting.py
Adam_Oss/: README.MD  atomicTransfer.js  package-lock.json  package.json
Afiniki-mhya_OSS_reward_bash/: package.json
Afiniki_mhya_Bash/: script.js
AlphaVote/: .gitignore  LICENSE
AlphaVote/backend/: Procfile  app.py  pyproject.toml  requirements.txt  wsgi.py
Ayuba_Voting_DApp/: License.txt  README.md
Backend/: BV0.py  BV1.py  BV2.py  BV3.py  BV4.py  Basic_Vote_Set_Up.py  mwall.py
Bi-iznillahi_bronze/: package-lock.json
Bronze_Badges/: bronze.txt  index.html  package.json  script.js  style.css
Bronze_Badges/seun-Choice-Coin-Python/: README.md  helpers.py  main.py  pyproject.toml
Choice coin/: index.html  script.js  style.css
Choice_Coin_Voting/: CheckResults.py  My_SQL.sql  VoteClass.py  Voting.db  __init__.py  config.py  easy_vote.py  index.py  models.py  requirements.txt  routes.py  vote.py  voters.db  voting.db
Dan_Oss/: README.MD  atom.js  package-lock.json
DecentralizedDecision2.0/: Decentralized Decisions 2.0
DevGrants/: # DevGrants.txt  README.md  index.html  style.css
Ethereum/: Readme.md  choice_0.sol  simplevote.sol  solidityvote.sol
GoldBadges/: readme.md
Gold_Badges/: readme.md
(+1744 files in other folders)
